# extend

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/compile_fail/: extension_traits_are_sealed.rs  extension_traits_are_sealed.stderr  supertraits_are_actually_included.stderr
tests/compile_pass/: async_trait.rs  changing_extension_trait_name.rs  disable_sealing.rs  extension_on_complex_types.rs  generics.rs  hello_world.rs  issue_7.rs  more_than_one_extension.rs  multiple_config.rs  visibility_config.rs
