[package]
name = "extend"
version = "1.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"
categories = ["rust-patterns"]
description = "Create extensions for types you don't own with extension traits but without the boilerplate."
homepage = "https://github.com/davidpdrsn/extend"
documentation = "https://docs.rs/extend"
keywords = ["extension", "trait"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/extend.git"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev_dependencies]
trybuild = "1.0.17"
async-trait = "0.1.40"

[lib]
proc-macro = true
path = "src/lib.rs"

[badges]
maintenance = { status = "passively-maintained" }
